finished modified sieve, need to test then finished

--- a/sieve_of_eratosthenes/Makefile
+++ b/sieve_of_eratosthenes/Makefile
@@ -5,5 +5,8 @@ sequential_sieve:
 parallel_sieve:	
 				mpicc sieve_par.c -o parallel_sieve -lm
 
+mod_sieve:	
+				mpicc sieve_par_MOD.c -o mod_sieve -lm
+				
 clean:
 	rm *_sieve
